peac_dev/force-app/main/default/objects/Contract__c/fields/Invoice_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Code__c</fullName>
    <label>Invoice Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Inv By Customer</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S - Inv Suppressed</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Inv By Contract</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - Contract Separated</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R - Rentals Separated</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N - No More Invoicing</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>M - Manual Invoicing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>