peac_dev/force-app/main/default/objects/Contract__c/fields/Invoice_Format__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Format__c</fullName>
    <label>Invoice Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSET</fullName>
                <label>Asset Detail</label>
            </value>
            <value>
                <fullName>STAND</fullName>
                <label>Contract Invoicing</label>
            </value>
            <value>
                <fullName>ACH</fullName>
                <label>Non OSG ACH</label>
            </value>
            <value>
                <fullName>ASST2</fullName>
                <label>Asset Summary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>