peac_dev/force-app/main/default/objects/Contract__c/fields/Invoice_Reprint_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reprint_Date__c</fullName>
    <description>Date in which the Reprint button was clicked</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Reprint Date</label>
    <type>Date</type>
</CustomField>