peac_dev/force-app/main/default/objects/Contract__c/fields/IsXBS__c.field-meta.xml
<CustomField>
    <fullName>IsXBS__c</fullName>
    <formula>IF(
  OR(
    Lessor_Code__c = &quot;111&quot;,
    Lessor_Code__c = &quot;113&quot;,
    Lessor_Code__c = &quot;211&quot;,
    Lessor_Code__c = &quot;213&quot;
    ), 
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is XBS?</label>
    <type>Checkbox</type>
</CustomField>