peac_dev/force-app/main/default/objects/Contract__c/fields/Judgement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Amount__c</fullName>
    <label>Judgement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>