peac_dev/force-app/main/default/objects/Contract__c/fields/Last_Late_Charges__c.field-meta.xml
<CustomField>
    <fullName>Last_Late_Charges__c</fullName>
    <label>Last Late Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>