peac_dev/force-app/main/default/objects/Contract__c/fields/Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>