peac_dev/force-app/main/default/objects/Contract__c/fields/Late_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_Amount__c</fullName>
    <label>Late Charges Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>