peac_dev/force-app/main/default/objects/Contract__c/fields/Late_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Late Charge Date</label>
    <type>Date</type>
</CustomField>