peac_dev/force-app/main/default/objects/Contract__c/fields/Late_Charge_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Charge Exempt</label>
    <type>Checkbox</type>
</CustomField>