peac_dev/force-app/main/default/objects/Contract__c/fields/Late_Charge_Rate__c.field-meta.xml
<CustomField>
    <fullName>Late_Charge_Rate__c</fullName>
    <label>Late Charge Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>