peac_dev/force-app/main/default/objects/Contract__c/fields/Late_Fees_Charged_off__c.field-meta.xml
<CustomField>
    <fullName>Late_Fees_Charged_off__c</fullName>
    <label>Late Fees Charged off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>