peac_dev/force-app/main/default/objects/Contract__c/fields/Lead_Invoice_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Invoice_Days__c</fullName>
    <label>Lead Invoice Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>