peac_dev/force-app/main/default/objects/Contract__c/fields/Lease_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Record_Type_Name__c</fullName>
    <description>Get Contract Record Type Name  SAL-4836</description>
    <formula>RecordType.Name</formula>
    <label>Lease Record Type Name</label>
    <type>Text</type>
</CustomField>