peac_dev/force-app/main/default/objects/Contract__c/fields/Legacy_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contract_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Contract Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>