peac_dev/force-app/main/default/objects/Contract__c/fields/Legal_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Legal_Letter_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Letter Sent</label>
    <type>Date</type>
</CustomField>