peac_dev/force-app/main/default/objects/Contract__c/fields/Lessor_Code__c.field-meta.xml
<CustomField>
    <fullName>Lessor_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lessor Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>