peac_dev/force-app/main/default/objects/Contract__c/fields/Letter_of_intent_received__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_intent_received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter of Intent Received</label>
    <type>Date</type>
</CustomField>