peac_dev/force-app/main/default/objects/Contract__c/fields/Litigation__c.field-meta.xml
<CustomField>
    <fullName>Litigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Litigation</label>
    <type>Checkbox</type>
</CustomField>