peac_dev/force-app/main/default/objects/Contract__c/fields/Loan_Pre_Qual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Pre_Qual_Amount__c</fullName>
    <formula>Customer__r.Loan_Pre_Qual_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Pre-Qual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>