peac_dev/force-app/main/default/objects/Contract__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>