peac_dev/force-app/main/default/objects/Contract__c/fields/Locations_Ids__c.field-meta.xml
<CustomField>
    <fullName>Locations_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Locations Ids</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>