peac_dev/force-app/main/default/objects/Contract__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF( IsXBS__c, 
    IMAGE(&quot;/resource/XBSLogo&quot;, &quot;XBSLogo&quot;, 200, -1), 
    IF( Is_Blind__c, 
        IMAGE(&quot;/resource/LeaseServicesLogo&quot;, &quot;LeaseServicesLogo&quot;, 200, -1), 
        IMAGE(&quot;/resource/PeacSolutionsLogo&quot;, &quot;PeacSolutionsLogo&quot;, 200, -1)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo</label>
    <type>Text</type>
</CustomField>