peac_dev/force-app/main/default/objects/Contract__c/fields/Maint_Payment__c.field-meta.xml
<CustomField>
    <fullName>Maint_Payment__c</fullName>
    <inlineHelpText>Last Service Amount</inlineHelpText>
    <label>Maint Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>