peac_dev/force-app/main/default/objects/Contract__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>