peac_dev/force-app/main/default/objects/Contract__c/fields/Meter_Account__c.field-meta.xml
<CustomField>
    <fullName>Meter_Account__c</fullName>
    <description>DP-766</description>
    <label>Meter Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DLR</fullName>
            </value>
            <value>
                <fullName>XPPS</fullName>
            </value>
            <value>
                <fullName>EAUT</fullName>
            </value>
            <value>
                <fullName>XRPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>