peac_dev/force-app/main/default/objects/Contract__c/fields/Metered__c.field-meta.xml
<CustomField>
    <fullName>Metered__c</fullName>
    <description>DP-766</description>
    <label>Metered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>