peac_dev/force-app/main/default/objects/Contract__c/fields/Mine__c.field-meta.xml
<CustomField>
    <fullName>Mine__c</fullName>
    <formula>Dealer_User__c  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mine</label>
    <type>Checkbox</type>
</CustomField>