peac_dev/force-app/main/default/objects/Contract__c/fields/Misc_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Misc_Amount_Due__c</fullName>
    <label>Misc Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>