peac_dev/force-app/main/default/objects/Contract__c/fields/Misc_Fees_Charged_off__c.field-meta.xml
<CustomField>
    <fullName>Misc_Fees_Charged_off__c</fullName>
    <label>Misc Fees Charged off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>