peac_dev/force-app/main/default/objects/Contract__c/fields/Misc_Inc_in_Rental_Pmt__c.field-meta.xml
<CustomField>
    <fullName>Misc_Inc_in_Rental_Pmt__c</fullName>
    <label>Misc Inc in Rental Pmt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>