peac_dev/force-app/main/default/objects/Contract__c/fields/Miscellaneous_City_Tax__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_City_Tax__c</fullName>
    <label>Miscellaneous City Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>