peac_dev/force-app/main/default/objects/Contract__c/fields/MNID_Assets__c.field-meta.xml
<CustomField>
    <fullName>MNID_Assets__c</fullName>
    <label>MN/ID Assets</label>
    <summaryFilterItems>
        <field>Contract_Asset__c.Asset_State__c</field>
        <operation>equals</operation>
        <value>ID, MN</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_Asset__c.Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>