peac_dev/force-app/main/default/objects/Contract__c/fields/Net_Investment__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment__c</fullName>
    <label>Net Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>