peac_dev/force-app/main/default/objects/Contract__c/fields/Net_Miscellaneous_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Net_Miscellaneous_Past_Due__c</fullName>
    <label>Net Miscellaneous Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>