peac_dev/force-app/main/default/objects/Contract__c/fields/New_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>yes, it&apos;s a lookup to itself, but it is not a hierarchy one.</description>
    <label>New Contract Number</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contracts (New Contract Number)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>