peac_dev/force-app/main/default/objects/Contract__c/fields/Next_Aging_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Aging_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Aging Date</label>
    <type>Date</type>
</CustomField>