peac_dev/force-app/main/default/objects/Contract__c/fields/No_More_Direct_Debits__c.field-meta.xml
<CustomField>
    <fullName>No_More_Direct_Debits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No More Direct Debits</label>
    <type>Date</type>
</CustomField>