peac_dev/force-app/main/default/objects/Contract__c/fields/NOD_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>NOD_Letter_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOD Letter Sent</label>
    <type>Date</type>
</CustomField>