peac_dev/force-app/main/default/objects/Contract__c/fields/Number_of_Beginning_Payments_in_Advance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beginning_Payments_in_Advance__c</fullName>
    <label>Number of Beginning Payments in Advance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>