peac_dev/force-app/main/default/objects/Contract__c/fields/Number_of_Open_Assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Assets__c</fullName>
    <label>Number of Open Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>