peac_dev/force-app/main/default/objects/Contract__c/fields/Original_Lease_Received__c.field-meta.xml
<CustomField>
    <fullName>Original_Lease_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Lease Received</label>
    <type>Checkbox</type>
</CustomField>