peac_dev/force-app/main/default/objects/Contract__c/fields/OSG_Autopay__c.field-meta.xml
<CustomField>
    <fullName>OSG_Autopay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSG Autopay</label>
    <type>Checkbox</type>
</CustomField>