peac_dev/force-app/main/default/objects/Contract__c/fields/Ours__c.field-meta.xml
<CustomField>
    <fullName>Ours__c</fullName>
    <description>DP-162 used to share/display the correct records to portal users.</description>
    <formula>AND(
				!ISBLANK(Dealer_Account__c),
				Dealer_Account__c =  LEFT($User.Dealer__c, 15)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ours</label>
    <type>Checkbox</type>
</CustomField>