peac_dev/force-app/main/default/objects/Contract__c/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <formula>Dealer_Name__r.Owner.Email</formula>
    <label>DealerOwnerEmail</label>
    <type>Text</type>
</CustomField>