peac_dev/force-app/main/default/objects/Contract__c/fields/Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_To_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paid To Date</label>
    <type>Date</type>
</CustomField>