peac_dev/force-app/main/default/objects/Contract__c/fields/Partial_Disposal__c.field-meta.xml
<CustomField>
    <fullName>Partial_Disposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Disposal</label>
    <type>Checkbox</type>
</CustomField>