peac_dev/force-app/main/default/objects/Contract__c/fields/Partner_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Address__c</fullName>
    <description>For showing the Dealer&apos;s Address on Blind Buyout Breakdown Letter</description>
    <formula>Dealer_Name__r.Business_Address__c &amp;
IF(ISBLANK(Dealer_Name__r.Business_Address2__c), 
  &apos;&apos;,
  BR() &amp; Dealer_Name__r.Business_Address2__c) &amp;  BR() &amp; 
Dealer_Name__r.Business_City__c &amp; &apos; &apos; &amp;
TEXT(Dealer_Name__r.Business_State__c) &amp; &apos; &apos; &amp;
Dealer_Name__r.Business_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Address</label>
    <type>Text</type>
</CustomField>