peac_dev/force-app/main/default/objects/Contract__c/fields/Pass_Through_Due__c.field-meta.xml
<CustomField>
    <fullName>Pass_Through_Due__c</fullName>
    <label>Pass Through Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>