peac_dev/force-app/main/default/objects/Contract__c/fields/Past_Due_130__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_130__c</fullName>
    <label>Rental Pastdue (1-30)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>