peac_dev/force-app/main/default/objects/Contract__c/fields/Past_Due_3160__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_3160__c</fullName>
    <label>Rental Pastdue (31-60)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>