peac_dev/force-app/main/default/objects/Contract__c/fields/Past_Due_6190__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_6190__c</fullName>
    <label>Rental Pastdue (61-90)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>