peac_dev/force-app/main/default/objects/Contract__c/fields/Pay_off_form_sent__c.field-meta.xml
<CustomField>
    <fullName>Pay_off_form_sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay off form sent</label>
    <type>Date</type>
</CustomField>