peac_dev/force-app/main/default/objects/Contract__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Contract Rental Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>