peac_dev/force-app/main/default/objects/Contract__c/fields/Payment_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Arrangement</label>
    <type>Checkbox</type>
</CustomField>