peac_dev/force-app/main/default/objects/Contract__c/fields/Payment_Arrangement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Amount__c</fullName>
    <label>Payment Arrangement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>