peac_dev/force-app/main/default/objects/Contract__c/fields/Payment_Arrangement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement_Frequency__c</fullName>
    <label>Payment Arrangement Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>