peac_dev/force-app/main/default/objects/Contract__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>