peac_dev/force-app/main/default/objects/Contract__c/fields/Payments_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Payments_Invoiced__c</fullName>
    <label>Payments Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>