peac_dev/force-app/main/default/objects/Contract__c/fields/Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>Payments_Made__c</fullName>
    <label>Payments Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>