peac_dev/force-app/main/default/objects/Contract__c/fields/Payments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Payments_Remaining__c</fullName>
    <label>Payments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>