peac_dev/force-app/main/default/objects/Contract__c/fields/Payments_Renewals_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Payments_Renewals_Remaining__c</fullName>
    <label>Payments/Renewals Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>