peac_dev/force-app/main/default/objects/Contract__c/fields/Payoff_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Form_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payoff Form Sent</label>
    <type>Date</type>
</CustomField>