peac_dev/force-app/main/default/objects/Contract__c/fields/Payoff_received__c.field-meta.xml
<CustomField>
    <fullName>Payoff_received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payoff Received</label>
    <type>Date</type>
</CustomField>