peac_dev/force-app/main/default/objects/Contract__c/fields/Pending_DocGen__c.field-meta.xml
<CustomField>
    <fullName>Pending_DocGen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in the filter of the DocGen Packages</description>
    <label>Pending_DocGen</label>
    <type>Checkbox</type>
</CustomField>