peac_dev/force-app/main/default/objects/Contract__c/fields/PG_Indicator__c.field-meta.xml
<CustomField>
    <fullName>PG_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PG Indicator</label>
    <type>Checkbox</type>
</CustomField>