peac_dev/force-app/main/default/objects/Contract__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <formula>IF( MNID_Assets__c &gt; 0, 
  
IF( ISBLANK(Remit_To_Address__c), &apos;&apos;, Remit_To_Address__c &amp; BR()) &amp;  
IF( ISBLANK(Remit_To_City__c), &apos;&apos;, Remit_To_City__c  &amp; &quot;, &quot;)&amp; 
IF( ISBLANK(Remit_To_State__c), &apos;&apos;, Remit_To_State__c  &amp; &quot;, &quot;)&amp; 
IF( ISBLANK(Remit_To_Zip_Code__c ), &apos;&apos;, Remit_To_Zip_Code__c  ), 


IF( INCLUDES ( Program__c , &apos;XBS&apos; ), 
&apos;Xerox Financial Services&apos; &amp; BR() &amp;

&apos;PO Box 7&apos; &amp; BR() &amp;

&apos;Mount Laurel, NJ 08054&apos;,
&apos;Lease Services&apos; &amp; BR() &amp;

&apos;PO Box 37&apos;  &amp; BR() &amp;

&apos;Mount Laurel, NJ 08054&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO</label>
    <type>Text</type>
</CustomField>