peac_dev/force-app/main/default/objects/Contract__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO#</label>
    <length>80</length>
    <type>Text</type>
</CustomField>