peac_dev/force-app/main/default/objects/Contract__c/fields/POA_Date__c.field-meta.xml
<CustomField>
    <fullName>POA_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Date</label>
    <type>Date</type>
</CustomField>