peac_dev/force-app/main/default/objects/Contract__c/fields/Prev_Mnth_Delin_Status__c.field-meta.xml
<CustomField>
    <fullName>Prev_Mnth_Delin_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prev Mnth Delin Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>