peac_dev/force-app/main/default/objects/Contract__c/fields/Previous_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous XFS Contract Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>