peac_dev/force-app/main/default/objects/Contract__c/fields/Previous_Contract_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Numbers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Contract Number(s)</label>
    <type>TextArea</type>
</CustomField>