peac_dev/force-app/main/default/objects/Contract__c/fields/Previous_Delinquent_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Delinquent_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Delinquent Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>