peac_dev/force-app/main/default/objects/Contract__c/fields/Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year__c</fullName>
    <formula>TEXT((YEAR(TODAY()) - 1))</formula>
    <label>Previous Year</label>
    <type>Text</type>
</CustomField>