peac_dev/force-app/main/default/objects/Contract__c/fields/Previous_Year_End_Balance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_End_Balance__c</fullName>
    <label>Previous Year End Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>