peac_dev/force-app/main/default/objects/Contract__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field value is updated from contract contact role record</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Primary Contact)</relationshipLabel>
    <relationshipName>Primary_Contact_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>