peac_dev/force-app/main/default/objects/Contract__c/fields/Process_Next_Location__c.field-meta.xml
<CustomField>
    <fullName>Process_Next_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Next Location</label>
    <type>Checkbox</type>
</CustomField>