peac_dev/force-app/main/default/objects/Contract__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>The value is populated from the Program field on the Opportunity. SL - 2093</description>
    <label>Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>