peac_dev/force-app/main/default/objects/Contract__c/fields/Proof_of_Claim_Amt__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Claim_Amt__c</fullName>
    <label>Proof of Claim Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>